--- a/Public/gamepage.html
+++ b/Public/gamepage.html
@@ -88,16 +88,7 @@
 <input type="submit">
     </form>
   </div>
-  <div class="previousPicks">
-    <h5>Your Previous Selections:</h5>
-    <ul class="pastTeams">
-      <li>WEEK 1:</li>
-      <li>WEEK 2:</li>
-      <li>WEEK 3:</li>
-      <li>WEEK 4:</li>
-      <li>WEEK 5:</li>
-
-    </ul>
+  <div id="currentPick">
   </div>
 </div>
 
