possible fix with public folder

--- a/Public/gamepage.html
+++ b/Public/gamepage.html
@@ -5,27 +5,27 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/public/css/styles.css">
+    <link rel="stylesheet" href="public/css/styles.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
     <div class="gamepagecontainer">
-      <div class="RABlogo"><img src="/public/images/RAB JPG_Black BG.jpg" height="400px"alt=""></div>
+      <div class="RABlogo"><img src="public/images/RAB JPG_Black BG.jpg" height="400px"alt=""></div>
         <div class="logintext">
 
     </div>
 <!-- END OF HEADER -->
 <!-- START OF NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="https://www.romanticaboutbaseball.com"><img height="40px"src="/public/images/RAB Heart JPG_Dk BG.jpg" alt=""></a>
+  <a class="navbar-brand" href="https://www.romanticaboutbaseball.com"><img height="40px"src="images/RAB Heart JPG_Dk BG.jpg" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="mailto: romanticaboutbaseball@gmail.com">Contact</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://www.patreon.com/romanticaboutbaseball" target="__blank">Support RAB</a>
