--- a/Public/gamepage.html
+++ b/Public/gamepage.html
@@ -5,13 +5,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="public/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
     <div class="gamepagecontainer">
-      <div class="RABlogo"><img src="public/images/RAB JPG_Black BG.jpg" height="400px"alt=""></div>
+      <div class="RABlogo"><img src="images/RAB JPG_Black BG.jpg" height="400px"alt=""></div>
         <div class="logintext">
 
     </div>
