--- a/Public/gamepage.html
+++ b/Public/gamepage.html
@@ -106,7 +106,7 @@
 
 <!-- FIREBASE CODE: -->
 <!-- FIREBASE CODE: -->
-<script src="/public/js/config.js"></script>
+<script src="js/config.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
 
 <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
@@ -131,7 +131,7 @@ const firebaseConfig = {
   const db= firebase.firestore();
   db.settings({timestampsInSnapshots: true});
 </script>
-<script src="/public/js/gamepage.js"></script>
+<script src="js/gamepage.js"></script>
 <!-- END FIREBASE CODE -->
 <!-- BOOSTRAP CODE -->
     <!-- Optional JavaScript -->
