--- a/Public/index.html
+++ b/Public/index.html
@@ -26,12 +26,12 @@
     <div class="LoginBottom">
         <p class="bottomText">Devised by stat guru <a href="https://www.twitter.com/passonjim" target="__blank">Jim Passon Jr.</a>, the RAB Survival game follows the formula of NFL Survival games,
         where you pick a team for a week.  If that team scores more runs than their opponents, you advance!  They get outscored, you are eliminated.<br> Can you Survive?</p> 
-        <p>Complete List of Rules</p>
+        <a href="/Public/rules.html">Complete Official Rules</a>
         
     </div>
 
 <!-- FIREBASE CODE: -->
-<script src="/public/js/config.js"></script>
+<script src="js/config.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
 
 <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
@@ -55,7 +55,7 @@ const firebaseConfig = {
   const auth = firebase.auth();
 </script>
 <!-- END FIREBASE CODE -->
-<script src="/public/js/app.js"></script>
+<script src="js/app.js"></script>
 </body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
