added rules page

--- a/Public/rules.html
+++ b/Public/rules.html
@@ -18,8 +18,30 @@
           </div>
           <div class="GameRules">
           <h4>CONCEPT:</h4><br>
-          <p>Based on the concepts of NFL Survival Leagues, particpants in the RAB Survival Game select an active MLB team to represent them for one week.  </p>
-
+          <p>Based on the concepts of NFL Survival Leagues, particpants in the RAB Survival Game select an active MLB team to represent them for one week.
+            If the player selected team outscores their combined opponents for that week, the player advances.  If not, they are eliminated.  Last team standing wins!  
+          </p>
+          <h4>OFFICIAL RULES:</h4><br>
+          <h5>ENTRY:</h5>
+          <ol>
+            <li>Player must have a valid twitter account that follows the games twitter handle.</li>
+            <li>Only one entry per person.  Once your twitter handle is logged into the app, that is the handle you must use to compete (no burners)</li>
+            <li>RAB reserves the right to remove any players suspected of having multiple handles, or just generally being "sus" without notice.</li>
+          </ol>
+          <br>
+          <h5>GAMEPLAY:</h5>
+          <ol>
+            <li>Players select a team to use for the upcoming week by entering it into the appropriate field on the game page.  That seletion can be changed at will until the weekly deadline.</li>
+            <li>The weekly deadline for submissions is Saturday Night at midnight.</li>
+            <li>Scores will be tallied from the following Monday, until the end of games on Sunday.</li>
+            <li>If the player is eliminated, their account will be disabled from the application.  If you can log in, you are still active.</li>
+            <li>Winners will be announced after there is one remaining player, or at the end of the season, should there be multiples.</li>
+          </ol>
+          <h5>WINNINGS:</h5>
+          <ol>
+            <li>For the 2021 season, it's all for pride.  Winnings will come in future years!</li>
+          </ol>
+          <H4>THANK YOU AND HAVE FUN!</H4>
         </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
