--- a/Public/index.html
+++ b/Public/index.html
@@ -26,7 +26,7 @@
     <div class="LoginBottom">
         <p class="bottomText">Devised by stat guru <a href="https://www.twitter.com/passonjim" target="__blank">Jim Passon Jr.</a>, the RAB Survival game follows the formula of NFL Survival games,
         where you pick a team for a week.  If that team scores more runs than their opponents, you advance!  They get outscored, you are eliminated.<br> Can you Survive?</p> 
-        <a href="/Public/rules.html">Complete Official Rules</a>
+        <a href="rules.html">Complete Official Rules</a>
         
     </div>
 
