--- a/Public/rules.html
+++ b/Public/rules.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/public/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -17,6 +17,7 @@
               <h3>Official Game Rules</h3>
           </div>
           <div class="GameRules">
+            <a href="index.html">Back to Login Screen</a><br><br>
           <h4>CONCEPT:</h4><br>
           <p>Based on the concepts of NFL Survival Leagues, particpants in the RAB Survival Game select an active MLB team to represent them for one week.
             If the player selected team outscores their combined opponents for that week, the player advances.  If not, they are eliminated.  Last team standing wins!  
