figured out export, added footer to gamepage

--- a/Public/gamepage.html
+++ b/Public/gamepage.html
@@ -65,7 +65,7 @@
     <a href="gamepage.html" style="color: blue;">close</a>
   </div>
 </div>
-
+<footer class="footer col-12 ">Romantic About Baseball © 2021</footer>
 
 
 
