added week menu, fixed some minor issues

--- a/Public/gamepage.html
+++ b/Public/gamepage.html
@@ -27,9 +27,9 @@
       <li class="nav-item">
         <a class="nav-link" href="mailto: romanticaboutbaseball@gmail.com">Contact</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="https://www.patreon.com/romanticaboutbaseball" target="__blank">Support RAB</a>
-      </li>
+      </li> -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Twitter Links
@@ -50,9 +50,34 @@
   <div class="teamSelect">
     <h4>SELECT YOUR TEAM:</h4>
     <form id="submission" action="" method="POST">
-      <input id="teams" type="text"><br>
+      <input id="teams" type="text"><br><br>
       <h4>CONFIRM TWITTER (no @):</h4>
       <input id="twitter" type="text" style="padding-top: 5px;"><br><br>
+      <label for="week">WEEK:</label>
+      <select name="week" id="weekSelect">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+        <option value="11">11</option>
+        <option value="12">12</option>
+        <option value="13">13</option>
+        <option value="14">14</option>
+        <option value="15">15</option>
+        <option value="16">16</option>
+        <option value="17">17</option>
+        <option value="18">18</option>
+        <option value="19">19</option>
+        <option value="20">20</option>
+        <option value="21">21</option>
+        <option value="22">22</option>
+      </select>
 <input type="submit" id="submitButton">
     </form>
   </div>
