added logic and placeholders

--- a/Public/gamepage.html
+++ b/Public/gamepage.html
@@ -50,9 +50,9 @@
   <div class="teamSelect">
     <h4>SELECT YOUR TEAM:</h4>
     <form id="submission" action="" method="POST">
-      <input id="teams" type="text"><br><br>
+      <input id="teams" type="text" placeholder="ex: Atlanta Braves"><br><br>
       <h4>CONFIRM TWITTER (no @):</h4>
-      <input id="twitter" type="text" style="padding-top: 5px;"><br><br>
+      <input id="twitter" type="text" style="padding-top: 5px;" placeholder="ex: RMNTCBASEBALL"><br><br>
       <label for="week">WEEK:</label>
       <select name="week" id="weekSelect">
         <option value="1">1</option>
@@ -90,6 +90,7 @@
     <a href="gamepage.html" style="color: blue;">close</a>
   </div>
 </div>
+
 <footer class="footer col-12 ">Romantic About Baseball © 2021</footer>
 
 
