--- a/Public/gamepage.html
+++ b/Public/gamepage.html
@@ -55,28 +55,31 @@
       <input id="twitter" type="text" style="padding-top: 5px;" placeholder="ex: RMNTCBASEBALL"><br><br>
       <label for="week">WEEK:</label>
       <select name="week" id="weekSelect">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-        <option value="9">9</option>
-        <option value="10">10</option>
-        <option value="11">11</option>
-        <option value="12">12</option>
-        <option value="13">13</option>
-        <option value="14">14</option>
-        <option value="15">15</option>
-        <option value="16">16</option>
-        <option value="17">17</option>
-        <option value="18">18</option>
-        <option value="19">19</option>
-        <option value="20">20</option>
-        <option value="21">21</option>
-        <option value="22">22</option>
+        <option value="1">1 (April 1st - April 11th</option>
+        <option value="2">2 (April 12th - April 18th </option>
+        <option value="3">3 (April 19th - April 25th)</option>
+        <option value="4">4 (April 26th - May 2nd)</option>
+        <option value="5">5 (May 3rd - May 9th)</option>
+        <option value="6">6 (May 10th - May 16th)</option>
+        <option value="7">7 (May 17th - May 23rd)</option>
+        <option value="8">8 (May 24th - May 30th)</option>
+        <option value="9">9 (May 31st - June 6th)</option>
+        <option value="10">10 (June 7th - June 13th)</option>
+        <option value="11">11 (June 14th - June 20th)</option>
+        <option value="12">12 (June 21st - June 27th)</option>
+        <option value="13">13 (June 28th - July 4th)</option>
+        <option value="14">14 (July 5th - July 11th)</option>
+        <option value="15">15 (July 12th - July 25th (All-Star Break)</option>
+        <option value="16">16 (July 26th - August 1st)</option>
+        <option value="17">17 (August 2nd - August 8th)</option>
+        <option value="18">18 (August 9th - August 15th)</option>
+        <option value="19">19 (August 16th - August 22nd)</option>
+        <option value="20">20 (August 23rd - August 29th)</option>
+        <option value="21">21 (August 30th - September 5th)</option>
+        <option value="22">22 (September 6th - September 12th)</option>
+        <option value="23">23 (September 13th - September 19th)</option>
+        <option value="24">24 (September 20th - September 26th)</option>
+        <option value="25">25 (September 27th - October 3rd)</option>
       </select>
 <input type="submit" id="submitButton">
     </form>
