--- a/Public/index.html
+++ b/Public/index.html
@@ -13,7 +13,7 @@
     <div class="logincontainer">
         <div class="RABlogo"><img src="images/RAB JPG_Black BG.jpg" height="400px"alt=""></div>
           <div class="logintext">
-              <h3>Welcome to the MLB Survival Game</h3>
+              <h3>Welcome to the MLB Survivor League</h3>
           </div>
           <div class="TwitterButton">
             <button id="TwitterButton"type="button" class="btn btn-lg btn-block">Login With Twitter</button>
