--- a/Public/gamepage.html
+++ b/Public/gamepage.html
@@ -50,7 +50,7 @@
   <div id="userDetails"></div><br>
   <div class="sheet">
     <h3>Track Your Progress!</h3>
-  <iframe src="https://docs.google.com/spreadsheets/d/1AcStXOtASVPTkbSumbCsacO07lcKBXlZyku6gyeiA7g/edit#gid=1696585558" frameborder="0"></iframe>
+  <iframe src="https://docs.google.com/spreadsheets/d/1I-yIcbtLa4MB0iZD5GccJGYbBdbTIMcGE2MTsuyxOTA/edit#gid=0" frameborder="0"></iframe>
   </div>
   
   <div class="teamSelect">
